# ircapture

./: .gitignore  .gitmodules  LICENSE  README.md  log  readme.txt  setup_environment
auvir_embed/cubemx/stm32f103c8t6/: .mxproject  CMakeLists.txt  debug.sh  openocd.cfg  stm32f103c8t6.ioc  stm32f103c8t6.txt
auvir_embed/cubemx/stm32f103c8t6/Inc/: infrared.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
auvir_embed/cubemx/stm32f103c8t6/SW4STM32/stm32f103c8t6 Configuration/: .cproject  .project
auvir_embed/cubemx/stm32f103c8t6/Src/: infrared.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
auvir_embed/cubemx/stm32f103c8t6/coocox/motionsensor/: motionsensor.cogui  motionsensor.comarker  motionsensor.coproj
auvir_embed/mocap/: CMakeLists.txt  gdb_start_script  kill_openocd  openocd.bat  openocd.cfg  openocd.sh
auvir_embed/mocap/Libraries/i2cdevlib_hal/I2Cdev/: I2Cdev.c  I2Cdev.h
auvir_embed/mocap/Libraries/i2cdevlib_hal/MPU6050/: MPU6050.h
auvir_embed/mocap/Libraries/i2cdevlib_jrowberg/: MPU6050.c
auvir_embed/mocap/Libraries/radio/: radio_data_formats.c  radio_data_formats.h  se8r01.c  se8r01.cpp  se8r01.h  se8r01_if.c  se8r01_if.h
auvir_embed/mocap/cmake/: CollectSources.cmake  gcc_stm32.cmake  gcc_stm32f1.cmake  stm32_linker.cmake
auvir_embed/mocap/common/: common.c  common.cpp  common.h  infrared.c  infrared.h  pin_mapping_new.h  pin_mapping_old.h
auvir_embed/mocap/receiver/: .mxproject  CMakeLists.txt  build.sh  stm32f103c8t6.ioc
auvir_embed/mocap/receiver/Inc/: stm32f1xx_hal_conf.h
auvir_embed/mocap/receiver/SW4STM32/stm32f103c8t6/: .cproject  .project
auvir_embed/mocap/receiver/SW4STM32/stm32f103c8t6 Configuration/: stm32f103c8t6.xml
auvir_embed/mocap/receiver/Src/: infrared_rx.cpp  main.cpp  sensor.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
auvir_embed/mocap/receiver/coocox/motionsensor/: motionsensor_receiver.comarker
auvir_embed/mocap/receiver/stm32f103/: .mxproject  CMakeLists.txt  build.sh  debug.sh  debug_stlink.sh  openocd.cfg  stm32f103c8t6.ioc  stm32f103c8t6.txt  testsh.sh
auvir_embed/mocap/receiver/stm32f103-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  motionsensor_receiver.cbp  motionsensor_receiver_flash.ld
auvir_embed/mocap/receiver/stm32f103/Inc/: infrared.h  mxconstants.h  nRF24L01P.h  se8r01.h  sensor.h  sensor_hub.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
auvir_embed/mocap/receiver/stm32f103/Src/: infrared.c  infrared_rx.c  infrared_rx.cpp  infrared_tx.c  main.c  nRF24L01P.c  se8r01.c  se8r01_rx_tx_2Mps.c  sensor.c  sensor_hub.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
auvir_embed/mocap/sensor-hid/sensor-hid-stm32f103c8t6/: .mxproject  CMakeLists.txt  debug.sh  debug_stlink.sh  sensor-hid-stm32f103c8t6.ioc  sensor-hid-stm32f103c8t6.txt
auvir_embed/mocap/sensor-hid/sensor-hid-stm32f103c8t6/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
auvir_embed/mocap/sensor-hid/sensor-hid-stm32f103c8t6/Src/: main.c  stm32f1xx_it.c  (+6 more)
auvir_embed/mocap/stm32cpp/: CMakeLists.txt
auvir_embed/mocap/transmitter/: .dir-locals.el  .mxproject  CMakeLists.txt  build.sh  debug_stlink.sh  gdb.bat  openocd.cfg  stm32f103c8t6.txt
auvir_embed/mocap/transmitter/Inc/: beamer.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
auvir_embed/mocap/transmitter/Src/: beamer.cpp  infrared_tx.cpp  main.cpp
auvir_embed/mocap/transmitter/stm32f100/: CMakeLists.txt  Discovery.ioc  Discovery.txt  build.sh  debug.sh  debug_stlink.sh
auvir_embed/mocap/transmitter/stm32f103/: .gdbinit  .mxproject  CMakeLists.txt  build.sh  compile.sh  debug.sh  debug_stlink.sh  gdb_start_script  openocd.bat  openocd.cfg  openocd_flash.bat  stm32f103c8t6.ioc  stm32f103c8t6.txt  working_cmake_lists_win
auvir_embed/mocap/usbdevice/: .cproject  .mxproject  CMakeLists.txt  gdb_start_script  stm32f103c8t6.ioc  stm32f103c8t6.txt
auvir_embed/mocap/usbdevice/Inc/: mocap_device.h  mxconstants.h  sensor_hub.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usbd_cdc_if.h
auvir_embed/mocap/usbdevice/Src/: main.cpp  mocap_device.cpp  sensor_hub.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd_cdc_if.c  usbd_desc.c
auvir_embed/mocap/usbdevice/stm32f103/: .cproject  .mxproject  .project  CMakeLists.txt  build.sh  debug.sh  stm32f103c8t6.ioc  stm32f103c8t6.txt
auvir_embed/mocap/vivetracker/: .mxproject  CMakeLists.txt  Makefile  build.sh  debug.sh  mx.scratch  openocd.bat  openocd_flash.bat  vivetracker.ioc
auvir_embed/mocap/vivetracker/Inc/: main.h  stm32f1xx_hal_conf.h  tim.h  vivetracker.h  vivetracker_c_api.h
auvir_embed/mocap/vivetracker/Src/: gpio.c  i2c.c  main.c  main.cpp  spi.c  stm32f1xx_hal_msp.c  tim.c  usb.c  vivetracker.cpp
auvir_embed/stm32_cmake/stm32-test/: BuildOptions.cmake  CMakeLists.txt  build.sh  main.c
auvir_embed/stm32_cmake/stm32test-HAL/: CMakeLists.txt  build.sh  debug.sh  gdb_start_script  kill_openocd  openocd.cfg  start_openocd  start_openocd2  stm32f10x_conf.h
auvir_embed/stm32_cmake/stm32test-HAL/Src/: main.c  stm32f1xx_hal_msp.c  syscalls.c
auvir_embed/stm32_cmake/stm32test-HAL/cmake/: gcc_stm32f1.cmake
auvir_embed/stm32_cmake/stm32test-HAL/coocox/: coocox.cogui  coocox.coproj
auvir_embed/stm32_cmake/stm32test-SPL/: .ycm_extra_conf.py  CMakeLists.txt  MPU6050.c  MPU6050.h  build.sh  debug.sh  gdb_start_script  main.c  mpu6050.h  start_openocd  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  tm_stm32f4_mpu6050.h
auvir_embed/stm32_cmake/stm32test-SPL/cmake/: gcc_stm32.cmake  stm32_linker.cmake
auvir_embed/stm32_cmake/stm32test-SPL/coocox/: coocox.cogui  coocox.coproj
auvir_input_controller/: .ycm_extra_conf.py  CMakeLists.txt  InputController.py  build.sh  data.txt  data1.txt  mpu6050_plot.py
auvir_input_controller/src/: imu_sensor.cpp  imu_sensor.hpp  ir_sensor.cpp  ir_sensor.hpp  main.cpp  serial_port.cpp  serial_port.hpp  timeout_serial.cpp  timeout_serial.hpp
auvir_model/: CMakeLists.txt  autobuild.sh  build.sh
auvir_model/cmake/: FindOpenCV.cmake
auvir_model/src/: main.cpp  testbed.cpp  testbed.hpp
auvir_model/test/: CMakeLists.txt  autotest.py  runtests  test.cpp
(+319 files in other folders)
