include(BuildOptions.cmake)

PROJECT(stm32-test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS gpio tim REQUIRED)

MESSAGE(STATUS "DIR: ${STD_PERIPH_LIBRARY_DIR}")
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    ${STD_PERIPH_LIBRARY_DIR}/Libraries/STM32F10x_StdPeriph_Driver/inc
    ${STD_PERIPH_LIBRARY_DIR}/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x
)

SET(PROJECT_SOURCES
    main.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
