# setup necessary paths to toolchain and libraries
set(TOOLCHAIN_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../../toolchain/gcc-arm-none-eabi-4_9-2015q2)
set(THIRDPARTY_STM32LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../../thirdparty/baremetal/stm32)
set(TARGET_TRIPLET arm-none-eabi)
set(STM32_CHIP STM32F103C8)
set(STM32_FAMILY F1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_MODULE_PATH}/gcc_stm32.cmake)
set(STM32Cube_DIR ${THIRDPARTY_STM32LIB_PATH}/STM32Cube_FW_${STM32_FAMILY}_V1.2.0)
set(STD_PERIPH_LIBRARY_DIR ${THIRDPARTY_STM32LIB_PATH}/STM32F10x_StdPeriph_Lib_V3.5.0)
#

PROJECT(stm32-test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS gpio tim REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    #${STD_PERIPH_LIBRARY_DIR}/Libraries/STM32F10x_StdPeriph_Driver/inc
    #${STD_PERIPH_LIBRARY_DIR}/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x
)

SET(PROJECT_SOURCES
    main.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
